Today half done

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,38 +1,52 @@
-.mainNavbar{
+.mainNavbar {
     width: 100%;
-    background: linear-gradient( #ff6b6b, #5f27cd);
-        color: #fff;
-}
-.flex{
+    background: linear-gradient(#ff6b6b, #5f27cd);
+    color: #fff;
+    position: fixed;
+    top: 0;
+  }
+
+  .flex {
     display: flex;
     align-items: center;
-}
+  }
 
-.nav a{
+  .nav a {
     text-decoration: none;
     color: #fff;
+  }
+  .nav a:hover {
+    color: rgb(31, 29, 29);
+  }
 
-}
-.nav li{
+  .nav li {
     position: relative;
-}
-.nav ul li{
-    list-style-type:none;
+  }
+
+  .nav ul li {
+    list-style-type: none;
     padding: 10px 10px;
     margin: auto;
-}
-.submenu {
+  }
+
+  .submenu {
     display: none;
     position: absolute;
     top: 100%;
     left: 0;
     list-style: none;
-    background: linear-gradient( #ff6b6b, #5f27cd);
-    /* Adjust the background color as needed */
+    background: linear-gradient(#ff6b6b, #5f27cd);
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
+
   .flex li:hover .submenu {
     display: block;
+  }
+
+  /* Add styles for the active link */
+  .nav a.active {
+    font-weight: bold;
+    color: yellow; /* Change the color as needed */
   }
