--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,19 @@
 body{
     background-color: #fff;
 }
-a{
+/* a{
     text-decoration: none;
+} */
+button{
+    padding: 10px 20px;
+    margin-left: 5px;
+    color: blue;
+    cursor: pointer;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+}
+button:hover {
+    color: #fff;
+    background-color: darkturquoise;
 }
