--- a/styles/Mobile.module.css
+++ b/styles/Mobile.module.css
@@ -1,4 +1,5 @@
 .smallContainer {
+    margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 16px;
