--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,19 +1,26 @@
 .smallContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 16px;
   }
-.card {
+  .card {
     background-color: #fff;
-    padding: 20px;
+    padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 520px;
+    height: 380px;
+    transition: box-shadow 0.3s ease; /* Adding a smooth transition for a better user experience */
 }
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); /* Highlight effect on hover */
+}
+
 
 .card img {
     width: 100%;
-    height: 320px; /* Maintain aspect ratio */
+    height: 200px; /* Maintain aspect ratio */
     border-radius: 8px;
+    
 }
 
 .card h3 {
@@ -21,11 +28,17 @@
 }
 
 .productName {
-    font-size: 1.2rem;
-    text-decoration: none;
-    font-weight: bold;
+    font-size: 20px;
 }
 
 .productDescription {
     color: #666;
+    font-size: 15px;
 }
+.price{
+    font-size: 15px;
+    color: #666;
+
+
+}
+
