--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,21 +1,26 @@
 /* Footer.module.css */
 
 .footer {
+    position: absolute;
+    left: 0;
+    right: 0;
     background-color: #333;
     color: #fff;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
+
 }
 
 .footerection {
-    margin-right: 20px; /* Adjust margin as needed */
     display: flex;
 }
 
 .footerlogo img {
-    width: 100px; /* Adjust the logo width */
+    width: 100px;
+    /* Adjust the logo width */
 }
 
 .footeraddress p {
@@ -23,7 +28,8 @@
 }
 
 .footersection {
-    text-align: right; /* Align the content to the right */
+    text-align: right;
+    /* Align the content to the right */
 }
 
 .sociallinks a {
@@ -33,4 +39,23 @@
     text-decoration: none;
 }
 
-/* Add more styling as needed */
+@media (max-width: 768px) {
+    .footer {
+        padding: 5px;
+    }
+    .footerection {
+    flex-direction: column;
+    }
+    .footer h3{
+        font-size: 12px;
+    }
+    .footer p{
+        font-size: 9px;
+    }
+    .footer a{
+        font-size: 9px;
+    }
+    
+
+
+}
