--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100vh;
 }
+
 body{
     background-color: #fff;
 }
@@ -39,4 +40,13 @@ button{
 button:hover{
     color: #fff;
     background-color: darkturquoise;
+}
+@media only screen and (max-width: 767px) {
+button{
+    padding: 2px;
+    margin: 3px;
+    font-size: 5px;
+
+}
+
 }
