--- a/styles/Mobile.module.css
+++ b/styles/Mobile.module.css
@@ -1,32 +1,88 @@
 .smallContainer {
     margin-top: 40px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    gap: 16px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 16px;
+    }
+   
+  .card {
+      background-color: #fff;
+      padding: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      height: 380px;
+      transition: box-shadow 0.3s ease;
+          /* border: 1px solid red; */
+  
+  
   }
-.card {
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 520px;
-}
-
-.card img {
-    width: 100%;
-    height: 320px; /* Maintain aspect ratio */
-    border-radius: 8px;
-}
-
-.card h3 {
-    /* Adjust text styles as needed */
-}
-
-.productName {
-    font-size: 1.2rem;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.productDescription {
-    color: #666;
-}
+  .card:hover {
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); /* Highlight effect on hover */
+  }
+  
+  .card img {
+      width: 100%;
+      height: 200px; /* Maintain aspect ratio */
+      border-radius: 8px;
+  }
+  
+  .card h3 {
+      /* Adjust text styles as needed */
+  }
+  
+  .productName {
+      font-size: 20px;
+      text-decoration: none;
+      font-weight: bold;
+  }
+  
+  .productDescription {
+      font-size: 16px;
+  
+      color: #666;
+  }
+  .price{
+      font-size: 17px;
+      color: slateblue;
+  
+  
+  }
+    @media only screen and (max-width: 550px) {
+  
+  .smallContainer {
+    margin-top: 40px;
+      grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+      gap: 10px;
+    }
+   
+  .card {
+      padding: 5px;
+      height: 300px;
+          /* border: 1px solid red; */
+  
+  
+  }
+  
+  
+  .card img {
+      width: 100%;
+      height: 120px; /* Maintain aspect ratio */
+  }
+  .productName {
+      font-size: 15px;
+      text-decoration: none;
+      font-weight: bold;
+  }
+  
+  .productDescription {
+      font-size: 10px;
+  
+      color: #666;
+  }
+  .price{
+      font-size: 12px;
+      color: slateblue;
+  
+  
+  }
+  
+    }
